# gnome-dbus-time-controller

./: .clang-format  .gitignore  CMakeLists.txt  README.md
files/: org.freedesktop.timedate1.conf
files/gnomeDbusTimeService/: run
files/gnomeDbusTimeService/log/: run
src/: CMakeLists.txt  gnome-dbus-time-service.xml  gnome-time-server.cpp  gnome-time-server.hpp  main.cpp
